# SecretScout

./: .gitignore  .pre-commit-config.yaml  .secretscout.toml  .secretscoutignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: ci.yml  security-scan.yml
docs/: CONFIG.md  RULES.md
src/secretscout/: cache.py  cli.py  commands.py  config.py  fix.py  git.py  models.py  reporting.py  rules.py  rules_cmd.py  scanner.py  util.py
tests/: test_reporting_sarif.py  test_rules_and_ignore.py
